src/main/docs/raml/examples/errors/createNewsUnprocessableEntity.raml
|
  {
    "errors" : [ {
      "value" : "null",
      "field" : "title",
      "message" : "must not be blank"
    } ],
    "_links" : {
      "self" : {
        "href" : "http://localhost:8080/news"
      }
    }
  }